--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/Main.Main
 EditorStartupMap=/Game/Levels/Main.Main
+GlobalDefaultGameMode=/Game/Blueprints/BP_Gamemode.BP_Gamemode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -65,7 +66,7 @@ r.DefaultFeature.AutoExposure.Bias=1.000000
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=False
 r.UsePreExposure=True
 r.EyeAdaptation.EditorOnly=False
-r.DefaultFeature.MotionBlur=False
+r.DefaultFeature.MotionBlur=True
 r.DefaultFeature.LensFlare=False
 r.TemporalAA.Upsampling=False
 r.SSGI.Enable=False
