--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -79,6 +79,12 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Look Up/Down",Scale=1.000000,Key=MouseY)
 +AxisMappings=(AxisName="Look Left/Right",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="Move Forward/Back",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Move Forward/Back",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="Move Forward/Back",Scale=1.000000,Key=Gamepad_LeftY)
++AxisMappings=(AxisName="Move Side",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="Move Side",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="Move Side",Scale=1.000000,Key=Gamepad_LeftX)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
