controller input update

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -89,6 +89,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Move Side",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Move Side",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="Move Side",Scale=1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="Look Up/Down (Gamepad)",Scale=1.000000,Key=Gamepad_RightY)
++AxisMappings=(AxisName="Look Left/Right (Gamepad)",Scale=1.000000,Key=Gamepad_RightX)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
