--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -86,6 +86,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Pickup",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
 +ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
 +ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightThumbstick)
++ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftTriggerAxis)
 +AxisMappings=(AxisName="Look Up/Down",Scale=1.000000,Key=MouseY)
 +AxisMappings=(AxisName="Look Left/Right",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="Move Forward/Back",Scale=1.000000,Key=W)
