--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/Main.Main
+GameDefaultMap=/Game/Levels/StayinNeighbor.StayinNeighbor
 EditorStartupMap=/Game/Levels/Main.Main
 GlobalDefaultGameMode=/Game/Blueprints/BP_Gamemode.BP_Gamemode_C
+bUseSplitscreen=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
